# snek5000-abl

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.html  README.html  README.md  Snakefile  abl.html  activate.sh  boundary_cond.html  environment.yml  environment_noversion.yml  filtering.html  framework.html  genindex.html  index.html  license.html  nek5000.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  roadmap.html  search.html  searchindex.js  setup.cfg  sitemap.xml  validation.html
.github/workflows/: docs.yml  tests.yml
_generated/: abl.cases.buoy_test.html  abl.cases.chat_peet.html  abl.cases.default.html  abl.cases.gabls1.html  abl.cases.half_channel.html  abl.cases.html  abl.cases.lee_moser.html  abl.cases.maronga_etal.html  abl.cases.mixing_len.html  abl.cli.html  abl.html  abl.operators.html  abl.output.html  abl.solver.html  abl.templates.html
_modules/: index.html
_modules/abl/: cli.html  operators.html  output.html  solver.html
_sources/: CHANGELOG.md.txt  CONTRIBUTING.md.txt  README.md.txt  index.rst.txt  nek5000.rst.txt  roadmap.rst.txt  validation.md.txt
_sources/_generated/: abl.cases.buoy_test.rst.txt  abl.cases.chat_peet.rst.txt  abl.cases.default.rst.txt  abl.cases.gabls1.rst.txt  abl.cases.half_channel.rst.txt  abl.cases.lee_moser.rst.txt  abl.cases.maronga_etal.rst.txt  abl.cases.mixing_len.rst.txt  abl.cases.rst.txt  abl.cli.rst.txt  abl.operators.rst.txt  abl.output.rst.txt  abl.rst.txt  abl.solver.rst.txt  abl.templates.rst.txt
_sources/stratification_correction/: PALM.ipynb.txt
_static/: documentation_options.js
docs/: Doxyfile  Makefile  abl.rst  conf.py  framework.rst  index.rst  initial_condition.py
docs/journal/: random.f
docs/journal/maronga/: filtering.ipynb
docs/journal/mods/: Status of Nek5000.ipynb
docs/stratification_correction/: Makefile  solve.f  solve.py  strat_correct.f  strat_correct.py  test_solve.py
docs/validation/: Case_Lee_Moser_2015.ipynb  LM_Channel_5200_mean_prof.txt  spongebx_func.py  stratification_correction_prototype.py  stratification_corrections.ipynb
doxygen/: ADJOINT.html  AVG.html  CHANGELOG_8md.html  CHKPOINTD.html  CHKPTMSTPD.html  CONTRIBUTING_8md.html  CTIMER.html  CVODE.html  DEALIAS.html  DOMAIN.html  DXYZ.html  DYN.html  EIGEN.html  ESOLV.html  FDMH1.html  FRAMELP.html  GEOM.html  GFLDR.html  GLOBALCOM.html  GMRES.html  HEADER.html  HSMG.html  INPUT.html  IOTOOLD.html  IXYZ.html  MAP2D.html  MASS.html  MNTRLOGD.html  MNTRTMRD.html  MVGEOM.html  NEKNEK.html  NEKUSE.html  NONCON.html  OPCTR.html  ORTHOP.html  ORTHOSTRS.html  ORTHOT.html  PARALLEL.html  PARDICT.html  PENALTY.html  (+513 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  (+95 more)
journal/maronga/: filtering.html
journal/mods/: Status of Nek5000.html
src/: .editorconfig
src/abl/: .exrc  SIZE  Snakefile  __init__.py  abl.box  abl.par  abl.usr  cli.py  clusters.py  io.py  makefile_usr.inc  operators.py  output.py  solver.py
src/abl_nek5000/: 3D_ABL.box  3D_ABL.par  3D_ABL.usr  SIZE  Snakefile
stratification_correction/: PALM.html  derivation.html
tests/: conftest.py  test_abl_api.py  test_cases.py  test_output.py  test_penalty.py  test_solver.py  test_solver_abl.py
validation/: Case_Lee_Moser_2015.html
(+57 files in other folders)
