[build-system]
requires = ["setuptools>=42.0.0", "wheel", "setuptools_scm[toml]>=3.4.2"]


[tool.setuptools_scm]
write_to = "src/abl/_version.py"
write_to_template = "__version__ = \"{version}\"\n"

[tool.isort]
known_first_party = ["fluiddyn", "fluidsim", "snek5000", "abl"]
# multi_line_output = 3
profile = "black"
line_length = 82
