[metadata]
author = Ashwin Vishnu Mohanan
author_email = ashwinvis+gh@protonmail.com
url = https://exabl.github.io/snek5000-abl
name = abl
description = Nek5000 abl example executed via snek5000
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
classifiers =
        Intended Audience :: Science/Research
        License :: OSI Approved :: BSD License
        Natural Language :: English
        Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
install_requires =
    snek5000 >= 0.6.1b0
    pymech >= 1.3.0.post0
    click
    zstandard
setup_requires =
    setuptools_scm

[options.entry_points]
console_scripts =
    abl = abl.cli:main

snek5000.solvers =
    abl = abl.solver

[options.extras_require]
docs =
    sphinx
    recommonmark
    sphinx-material
    breathe
    setuptools_scm

tests =
    pytest
    pytest-xdist
    nox

hpc =
    %(tests)s
    ipython
    click

dev =
    %(docs)s
    %(hpc)s
    colorlog
    pdbpp
    rope
    python-language-server
    fortran-language-server
    pre-commit
    twine
    readme-renderer[md]

[options.packages.find]
where=src

[options.package_data]
abl = templates/*.j2, bc/*, forcing/*, sgs/*, toolbox/*, *.usr, *.par, *.box, SIZE, Snakefile, etc/*.yml

[flake8]
ignore = E501,W503,W505
max-line-length = 82

[isort]
known_first_party = fluiddyn, fluidsim, snek5000, abl
multi_line_output = 3
