[metadata]
author = Ashwin Vishnu Mohanan
author_email = ashwinvis+gh@protonmail.com
url = https://exabl.github.io/snek5000-abl
name = abl
description = Nek5000 abl example executed via snek5000
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
classifiers =
        Development Status :: 4 - Beta
        Intended Audience :: Science/Research
        License :: OSI Approved :: BSD License
        Natural Language :: English
        Programming Language :: Python :: 3
        Topic :: Scientific/Engineering

[options]
python_requires = >= 3.8
package_dir=
    =src
packages=find:
install_requires =
    snek5000 >= 0.7.0b0
    pymech >= 1.3.0.post0
    click
    rich
    zstandard
setup_requires =
    setuptools_scm

[options.entry_points]
console_scripts =
    abl = abl.cli:main

snek5000.solvers =
    abl = abl.solver

[options.extras_require]
docs =
    sphinx
    myst-parser
    myst-nb
    docutils <0.18, >=0.14  # sphinx, myst-parser and myst-nb is incompatible with docutils==0.18
    sphinx-rtd-theme
    breathe
    setuptools_scm

tests =
    pytest
    pytest-xdist
    pytest-ordering
    nox

hpc =
    %(tests)s
    ipython
    ipykernel
    click
    python-lsp-server
    fortran-language-server
    # Installable using pipx
    # jedi-language-server

dev =
    %(docs)s
    %(hpc)s
    snek5000[dev]
    flake8
    pdbpp
    pre-commit
    twine
    build
    sympy

jupyter =
    %(hpc)s
    jupyterlab
    jupyter-server
    dask-labextension
    jupyterlab-lsp
    jupyter-server-mathjax
    jupyterlab-git

[options.packages.find]
where=src

[options.package_data]
abl = templates/*.j2, bc/*, forcing/*, sgs/*, sponge_box/*, toolbox/*, *.usr, *.par, *.box, SIZE, Snakefile, etc/*.yml

[flake8]
ignore = E501,W503,W505
max-line-length = 82
